--- a/5-Simulate-v1-TEST.ipynb
+++ b/5-Simulate-v1-TEST.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,44 @@
       "확인한 사진 수 : 5000 | 정확도:  98.22\n",
       "확인한 사진 수 : 6000 | 정확도:  97.92\n",
       "확인한 사진 수 : 7000 | 정확도:  97.89\n",
-      "확인한 사진 수 : 8000 | 정확도:  98.11\n"
+      "확인한 사진 수 : 8000 | 정확도:  98.11\n",
+      "확인한 사진 수 : 9000 | 정확도:  98.21\n",
+      "확인한 사진 수 : 10000 | 정확도:  98.31\n",
+      "확인한 사진 수 : 11000 | 정확도:  98.41\n",
+      "확인한 사진 수 : 12000 | 정확도:  98.52\n",
+      "확인한 사진 수 : 13000 | 정확도:  98.59\n",
+      "확인한 사진 수 : 14000 | 정확도:  98.65\n",
+      "확인한 사진 수 : 15000 | 정확도:  98.67\n",
+      "확인한 사진 수 : 16000 | 정확도:  98.74\n",
+      "확인한 사진 수 : 17000 | 정확도:  98.8\n",
+      "확인한 사진 수 : 18000 | 정확도:  98.81\n",
+      "확인한 사진 수 : 19000 | 정확도:  98.72\n",
+      "확인한 사진 수 : 20000 | 정확도:  98.67\n",
+      "확인한 사진 수 : 21000 | 정확도:  98.58\n",
+      "확인한 사진 수 : 22000 | 정확도:  98.59\n",
+      "확인한 사진 수 : 23000 | 정확도:  98.61\n",
+      "확인한 사진 수 : 24000 | 정확도:  98.6\n",
+      "확인한 사진 수 : 25000 | 정확도:  98.65\n",
+      "확인한 사진 수 : 26000 | 정확도:  98.63\n",
+      "확인한 사진 수 : 27000 | 정확도:  98.63\n",
+      "확인한 사진 수 : 28000 | 정확도:  98.67\n",
+      "확인한 사진 수 : 29000 | 정확도:  98.68\n",
+      "확인한 사진 수 : 30000 | 정확도:  98.72\n",
+      "확인한 사진 수 : 31000 | 정확도:  98.74\n",
+      "확인한 사진 수 : 32000 | 정확도:  98.78\n",
+      "확인한 사진 수 : 33000 | 정확도:  98.82\n",
+      "확인한 사진 수 : 34000 | 정확도:  98.85\n",
+      "확인한 사진 수 : 35000 | 정확도:  98.89\n",
+      "확인한 사진 수 : 36000 | 정확도:  98.92\n",
+      "확인한 사진 수 : 37000 | 정확도:  98.95\n",
+      "확인한 사진 수 : 38000 | 정확도:  98.97\n",
+      "전체 이미지 수 38483\n",
+      "LEFT 를 못맞춘 경우의 수: 38\n",
+      "RIGHT 를 못맞춘 경우의 수: 18\n",
+      "FORWARD 를 못맞춘 경우의 수: 165\n",
+      "FORWARD-LEFT 를 못맞춘 경우의 수: 43\n",
+      "FORWARD-RIGHT 를 못맞춘 경우의 수: 127\n",
+      "ETC 를 못맞춘 경우의 수: 0\n"
      ]
     }
    ],
@@ -259,7 +296,6 @@
     "missed_right = 0\n",
     "missed_upleft = 0\n",
     "missed_upright = 0\n",
-    "missed_stop = 0\n",
     "missed_etc = 0\n",
     "\n",
     "for i in range(num_images):\n",
@@ -290,8 +326,6 @@
     "            missed_upleft += 1\n",
     "        elif int(ys[i]) == cfg.UP_RIGHT:\n",
     "            missed_upright += 1\n",
-    "        elif int(ys[i]) == cfg.STOP:\n",
-    "            missed_stop += 1\n",
     "        else:  # etc\n",
     "            missed_etc = missed_etc + 1\n",
     "            \n",
@@ -305,7 +339,6 @@
     "print('FORWARD 를 못맞춘 경우의 수: ' + str(missed_forward))\n",
     "print('FORWARD-LEFT 를 못맞춘 경우의 수: ' + str(missed_upright))\n",
     "print('FORWARD-RIGHT 를 못맞춘 경우의 수: ' + str(missed_upleft))\n",
-    "print('STOP 를 못맞춘 경우의 수: ' + str(missed_stop))\n",
     "print('ETC 를 못맞춘 경우의 수: ' + str(missed_etc))"
    ]
   },
