--- a/2-Cleaning.ipynb
+++ b/2-Cleaning.ipynb
@@ -38,16 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "폴더를 생성하고 data.csv 파일을 복사합니다.\n",
-      "이미지 파일을 새로운 폴더에 저장합니다.\n",
-      "Bye~\n"
+     "ename": "IsADirectoryError",
+     "evalue": "[Errno 21] Is a directory: '../dataset/totalimage0513/dataset'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIsADirectoryError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-445ac5ebec1a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0moriginal_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'../dataset/totalimage0513'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moriginal_path\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'/dataset'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcsvfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0mspamreader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsvfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquotechar\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'|'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mspamreader\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIsADirectoryError\u001b[0m: [Errno 21] Is a directory: '../dataset/totalimage0513/dataset'"
      ]
     }
    ],
@@ -65,7 +67,7 @@
     "\n",
     "# data.csv 파일 읽어오기\n",
     "\n",
-    "original_path = '../dataset/training-data-stop/1-original'\n",
+    "original_path = '../dataset/totalimage0513/datasetl'\n",
     "with open(original_path + '/data.csv', newline='') as csvfile:\n",
     "    spamreader = csv.reader(csvfile, delimiter=',', quotechar='|')\n",
     "    for row in spamreader:\n",
@@ -81,7 +83,7 @@
     "\n",
     "\n",
     "# 원본 이미지를 정제하고, cleaned 폴더에 저장\n",
-    "cleaned_path = '../dataset/training-data-stop/2-cleaned'\n",
+    "cleaned_path = '../dataset/totalimage0513/dataset'\n",
     "\n",
     "# cleaned 폴더가 이미 존재하는지 확인하고, 있다면 삭제하기\n",
     "# 다른 프로세스가 사용중이라는 메시지가 나오면, 커널을 재시작\n",
@@ -119,68 +121,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# In[3]:\n",
-    "\n",
-    "\n",
-    "filepaths = []  # 촬영한 이미지의 이름 및 경로를 저장할 버퍼\n",
-    "filenames = []  # 파일명만 저장할 버퍼\n",
-    "directions = []  # 각 이미지 별로 사용자가 선택한 방향키를 저장할 버퍼\n",
-    "\n",
-    "\n",
-    "# In[4]:\n",
-    "\n",
-    "\n",
-    "# data.csv 파일 읽어오기\n",
-    "\n",
-    "original_path = '../dataset/training-data-stop/1-original'\n",
-    "with open(original_path + '/data.csv', newline='') as csvfile:\n",
-    "    spamreader = csv.reader(csvfile, delimiter=',', quotechar='|')\n",
-    "    for row in spamreader:\n",
-    "        # row[0] : 이미지 파일 이름, row[1] : 해당 영상때 선택한 방향키 정보 (숫자)\n",
-    "        #print(row[0], row[1])\n",
-    "        filenames.append(row[0])  # 파일명만 저장\n",
-    "        filepaths.append(original_path + '/' + row[0])  # 파일 경로 및 파일 이름을 추출하여 xs에 저장\n",
-    "        directions.append(int(row[1]))  # 사용자가 입력한 방향키 저장\n",
-    "        \n",
-    "\n",
-    "\n",
-    "# In[5]:\n",
-    "\n",
-    "\n",
-    "# 원본 이미지를 정제하고, cleaned 폴더에 저장\n",
-    "cleaned_path = '../dataset/training-data-stop/2-cleaned'\n",
-    "\n",
-    "# cleaned 폴더가 이미 존재하는지 확인하고, 있다면 삭제하기\n",
-    "# 다른 프로세스가 사용중이라는 메시지가 나오면, 커널을 재시작\n",
-    "if os.path.isdir(cleaned_path):\n",
-    "    shutil.rmtree(cleaned_path)\n",
-    "    print(cleaned_path, \" 폴더를 삭제했습니다..\")\n",
-    "\n",
-    "# 폴더를 생성하고 data.csv 파일을 복사\n",
-    "print('폴더를 생성하고 data.csv 파일을 복사합니다.')\n",
-    "os.makedirs(cleaned_path)\n",
-    "shutil.copy(original_path + '/data.csv', cleaned_path + '/data.csv')\n",
-    "\n",
-    "\n",
-    "# In[7]:\n",
-    "\n",
-    "\n",
-    "# 이미지 파일을 수정하지 않고, 새로운 위치에 저장\n",
-    "print('이미지 파일을 새로운 폴더에 저장합니다.')\n",
-    "for i in range(len(filepaths)):\n",
-    "    original_img_filename = filepaths[i]\n",
-    "    original_direction = directions[i]\n",
-    "\n",
-    "    # 이미지 파일을 연뒤\n",
-    "    img_handler = Image.open(original_img_filename)\n",
-    "\n",
-    "    # 수정된 이미지를 새로운 위치에 저장\n",
-    "    img_handler.save(cleaned_path + '/' + filenames[i])\n",
-    "\n",
-    "print('Bye~')\n",
-    "# THE END"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
